@@ -38,6 +38,9 @@ Trunk (unreleased changes)
     HADOOP-6832. Add an authentication plugin using a configurable static user
     for the web UI. (Owen O'Malley and Todd Lipcon via cdouglas)
 
+    HADOOP-7144. Expose JMX metrics via JSON servlet. (Robert Joseph Evans via
+    cdouglas)
+
   IMPROVEMENTS
 
     HADOOP-7042. Updates to test-patch.sh to include failed test names and
